MDEV-8133 ALTER TABLE can perform the operation but escape the binary log

fix a few cases where a successful ALTER was not binlogged:
* on errors after the completed ALTER, binlog it, then return an error
* don't let thd->killed abort open_table() after completed
  online ALTER.